# WIFI-QRScanner

./: .gitignore  CMakeLists.txt  Main.qml  README.md
include/: FrameProcessor.h  QrCodeWorker.h  QrScanner.h
src/: FrameProcessor.cpp  QrCodeWorker.cpp  QrScanner.cpp  main.cpp
